inial thought exactly added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="slider">
                 <img src="/img/gym slider.jpg" alt="" width="1200px" height="450px">
                 <h1 class="heading1">“The body achieves what <br>
-                    the mind believes.”</h1>
+                    the mind believes, Exactly”</h1>
             </div>
             <h1 class="heading2">“Getting fit is <br>all about mind over matter.<br> I don't mind, so it doesn't
                 matter.” ...</h1>
